[Nishant] Project 75 Percent

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,13 +33,13 @@
       <a id="logo-container" href="#" class="brand-logo">Sentoo | Analyse Sentiments</a>
       <ul class="right hide-on-med-and-down">
         <li><a class="waves-effect waves-red btn-flat modal-trigger" href="#modal1">Analyse Tweet</a></li>
-        <li><a href="http://snapego.wordpress.com" target="_blank">Anayse Text</a></li>
+        <li><a href="textanalyse" target="_blank">Anayse Text</a></li>
         
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a class="waves-effect waves-red btn-flat modal-trigger" href="#modal1">Analyse Tweet</a></li>
-        <li><a href="http://snapego.wordpress.com" target="_blank">Analyse Text</a></li>
+        <li><a href="textanalyse" target="_blank">Analyse Text</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="fa fa-bars red-text"></i></a>
     </div>
