--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sentoo | Sentiment Analytics At Its Best.</title>
+  <title>Sentiment analyser | Sentiment Analytics At Its Best.</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -30,7 +30,8 @@
 <div class="navbar-fixed">
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Sentoo | Analyse Sentiments</a>
+      <a id="logo-container" href="#" class="brand-logo"> Sentiment Analyser 
+        | Minor Project</a>
       <ul class="right hide-on-med-and-down">
         <li><a class="waves-effect waves-red btn-flat modal-trigger" href="#modal1">Analyse Tweet</a></li>
         <li><a href="textanalyse" target="_blank">Anayse Text</a></li>
@@ -72,19 +73,14 @@
   </div>
 
 
-  <div id="counter" class="parallax-container valign-wrapper">
+  <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
-        <div class="row center white-text">
-          <p><br><br><br></p>
-          <div id="count" class="count-number"></div>
-        </div>
-        <div class="row">
-          <p><br><br></p>
-          <h5 class="header center white-text">Tweets Have Been Anaysed Till Now.</h5>
-          <p class="white-text center"><br><br><br>
-          <center><h5><a class="waves-effect waves-white btn-flat modal-trigger center white-text" href="#modal1">Get Started</a></h5>
-          <center></p>
+        <div class="row white-text">
+          <h4 class="red-text lighten 1">Sentiment Analyser | About Project </h4>
+          <hr>
+          <p class="white-text">This project addresses the problem of sentiment analysis of a given text or tweet and classifying the sentiments expressed in them as positive, negative or neutral. Sentiment Analyser is of big use for companies and other industries to review their product by knowing what people are thinking about them. It may also come handy to know the mood of writer in a text.</p>
+          <p class="white-text">This project is developed by Nishant, Naresh, Gaurav and Krati Under the guiance of Dr. Jaytrilok Chaudhary,as their minor project during their third year of bachelors degree in Computer Science and Engineering.</p>
         </div>
       </div>
     </div>
@@ -95,7 +91,7 @@
     <div class="container">
       <div class="row center white-text">
         <ul>
-        <li><a href="https://www.facebook.com/snapego" target="_blank" class="white-text"><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li><a href="https://www.facebook.com/" target="_blank" class="white-text"><i class="fa fa-facebook fa-2x"></i></a></li>
         <li><a href="#" class="white-text"><i class="fa fa-twitter fa-2x"></i></a></li>
         <li><a href="#" class="white-text"><i class="fa fa-google-plus fa-2x"></i></a></li>
         <li><a href="#" class="white-text"><i class="fa fa-envelope fa-2x"></i></a></li>
@@ -108,7 +104,7 @@
             <li><a class="brown-text" href="#!">Careers</a></li>
             <li><a class="brown-text" href="#!">Privacy</a></li>
             <li><a class="brown-text" href="#!">Team</a></li>
-            <li><a class="brown-text" href="http://snapego.wordpress.com" target="_blank">Blog</a></li>
+            <li><a class="brown-text" href="#!" target="_blank">Blog</a></li>
             <li><a class="brown-text" href="#!">News</a></li>
 
           </ul>
@@ -120,7 +116,7 @@
       <div class="row">
         <div class="col l6">
           <span class="brown-text">
-          &copy; 2015 | Snapego</span>
+          &copy; 2016 | NIT-B</span>
         </div>
         <div class="col l6 right brown-text">
           <p class="right">Handcrafted With <span class="white-text"><i class="fa fa-heart fa-2x"></i></span> in India.</p> 
