--- a/app/templates/tweetsAnalyse.html
+++ b/app/templates/tweetsAnalyse.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sentoo | Sentiment Analytics At Its Best.</title>
+  <title>Sentiment Analyser | Sentiment Analytics At Its Best.</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -21,16 +21,17 @@
 <div class="navbar-fixed">
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Sentoo | Analyse Sentiments</a>
+      <a id="logo-container" href="#" class="brand-logo">Sentiment Analyser 
+        | Minor Project</a>
       <ul class="right hide-on-med-and-down">
         <li><a class="waves-effect waves-red btn-flat modal-trigger" href="#modal1">Analyse Tweet</a></li>
-        <li><a href="http://snapego.wordpress.com" target="_blank">Anayse Text</a></li>
+        <li><a href="#!" target="_blank">Anayse Text</a></li>
         
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a class="waves-effect waves-red btn-flat modal-trigger" href="#modal1">Analyse Tweet</a></li>
-        <li><a href="http://snapego.wordpress.com" target="_blank">Analyse Text</a></li>
+        <li><a href="#!" target="_blank">Analyse Text</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="fa fa-bars red-text"></i></a>
     </div>
@@ -101,7 +102,7 @@
     <div class="container">
       <div class="row center white-text">
         <ul>
-        <li><a href="https://www.facebook.com/snapego" target="_blank" class="white-text"><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li><a href="https://www.facebook.com/" target="_blank" class="white-text"><i class="fa fa-facebook fa-2x"></i></a></li>
         <li><a href="#" class="white-text"><i class="fa fa-twitter fa-2x"></i></a></li>
         <li><a href="#" class="white-text"><i class="fa fa-google-plus fa-2x"></i></a></li>
         <li><a href="#" class="white-text"><i class="fa fa-envelope fa-2x"></i></a></li>
@@ -114,7 +115,7 @@
             <li><a class="brown-text" href="#!">Careers</a></li>
             <li><a class="brown-text" href="#!">Privacy</a></li>
             <li><a class="brown-text" href="#!">Team</a></li>
-            <li><a class="brown-text" href="http://snapego.wordpress.com" target="_blank">Blog</a></li>
+            <li><a class="brown-text" href="#!" target="_blank">Blog</a></li>
             <li><a class="brown-text" href="#!">News</a></li>
 
           </ul>
@@ -126,7 +127,7 @@
       <div class="row">
         <div class="col l6">
           <span class="brown-text">
-          &copy; 2015 | Snapego</span>
+          &copy; 2016 |   NIT-B</span>
         </div>
         <div class="col l6 right brown-text">
           <p class="right">Handcrafted With <span class="white-text"><i class="fa fa-heart fa-2x"></i></span> in India.</p> 
